<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login_signup_screen">

        <!--        <ImageView-->
        <!--            android:id="@+id/bg_image"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="0dp"-->

        <!--            android:scaleType="centerCrop"-->
        <!--            android:src="@drawable/bg_main"-->
        <!--            android:foreground="@drawable/trending_gradient_shape"-->

        <!--            app:layout_constraintLeft_toLeftOf="parent"-->
        <!--            app:layout_constraintTop_toTopOf="parent"-->
        <!--            app:layout_constraintRight_toRightOf="parent"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent"/>-->

        <VideoView
            android:id="@+id/bg_image"
            android:layout_width="0dp"
            android:layout_height="0dp"

            android:scaleType="centerCrop"
            android:src="@raw/bg_main"
            android:foreground="@drawable/trending_gradient_shape"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/app_name"

            android:fontFamily="@font/pacifico"

            android:textColor="@color/colorPrimaryFaded"

            android:textSize="70sp"

            android:layout_marginTop="30dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/sub_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/app_name_sub"

            android:fontFamily="@font/poppins_medium"
            android:textColor="#D9FFFFFF"

            android:textSize="18sp"

            android:padding="10dp"

            app:layout_constraintTop_toBottomOf="@id/logo"
            app:layout_constraintLeft_toLeftOf="@id/logo"
            app:layout_constraintRight_toRightOf="@id/logo" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@android:color/white"
            android:padding="20dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                app:cornerRadius="8dp"

                android:paddingTop="18dp"
                android:paddingBottom="18dp"

                android:paddingStart="28dp"
                android:paddingEnd="28dp"

                android:textSize="14sp"

                style="@style/Widget.MaterialComponents.Button.OutlinedButton"

                android:text="@string/log_in"

                android:fontFamily="@font/roboto"
                android:textFontWeight="700"
                android:textStyle="bold"

                android:textColor="@android:color/black"
                app:strokeColor="@android:color/black"
                app:strokeWidth="2dp"
                app:rippleColor="@color/colorPrimaryLightFaded"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toLeftOf="@id/register_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/register_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                app:cornerRadius="8dp"

                android:paddingTop="18dp"
                android:paddingBottom="18dp"

                android:paddingStart="28dp"
                android:paddingEnd="28dp"

                style="@style/Widget.MaterialComponents.Button"

                android:textSize="14sp"

                android:layout_marginStart="20dp"

                android:text="@string/register"

                android:fontFamily="@font/roboto"
                android:textFontWeight="700"
                android:textStyle="bold"

                android:textColor="@android:color/white"
                android:backgroundTint="@android:color/black"
                app:rippleColor="@color/colorPrimaryLightFaded"

                app:layout_constraintLeft_toRightOf="@id/login_btn"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
