<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout android:layout_height="match_parent"
        android:layout_width="match_parent"

        android:paddingTop="40dp"
        android:paddingBottom="40dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/login_title"

            android:fontFamily="@font/comfortaa"

            android:textColor="@color/colorText"

            android:textSize="55sp"

            android:layout_marginTop="20dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="Sorry Username or Password is wrong"

            android:fontFamily="@font/comfortaa"

            android:textColor="@color/colorError"

            android:textSize="14sp"

            android:visibility="invisible"

            android:layout_marginTop="10dp"

            app:layout_constraintTop_toBottomOf="@+id/login_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/label_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxStrokeWidth="2dp"
            app:boxStrokeErrorColor="@color/colorError"

            app:hintTextColor="@color/colorPrimary"

            android:layout_marginTop="10dp"

            app:layout_constraintTop_toBottomOf="@+id/error_message"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:textCursorDrawable="@null"

                android:textSize="14sp"
                android:fontFamily="@font/comfortaa_bold"
                android:textFontWeight="400"

                android:hint="Username"
                android:inputType="text"

                android:textColor="@android:color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/label_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxStrokeWidth="2dp"
            app:boxStrokeErrorColor="@color/colorError"

            app:hintTextColor="@color/colorPrimary"

            android:layout_marginTop="20dp"

            app:layout_constraintTop_toBottomOf="@+id/label_username"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:textCursorDrawable="@null"

                android:textSize="14sp"
                android:fontFamily="@font/comfortaa_bold"
                android:textFontWeight="400"

                android:textColor="@android:color/black"

                android:hint="Password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            app:cornerRadius="8dp"

            android:paddingTop="18dp"
            android:paddingBottom="18dp"

            android:paddingStart="28dp"
            android:paddingEnd="28dp"

            style="@style/Widget.MaterialComponents.Button"

            android:textSize="14sp"

            android:layout_marginTop="20dp"

            android:text="@string/log_in"

            android:fontFamily="@font/roboto"
            android:textFontWeight="700"
            android:textStyle="bold"

            android:textColor="@android:color/white"
            android:backgroundTint="@android:color/black"
            app:rippleColor="@color/colorPrimaryLightFaded"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_password"
            app:layout_constraintRight_toRightOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/forget_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:cornerRadius="8dp"

            android:paddingTop="10dp"
            android:paddingBottom="10dp"

            android:paddingStart="24dp"
            android:paddingEnd="24dp"

            style="@style/Widget.MaterialComponents.Button.TextButton"

            android:textSize="12sp"

            android:layout_marginTop="10dp"

            android:text="@string/forgot_password"

            android:fontFamily="@font/roboto"
            android:textFontWeight="700"
            android:textStyle="bold"

            android:textColor="@color/colorPrimary"
            app:rippleColor="@color/colorPrimaryLightFaded"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_btn"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
